--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ a, a:{
 .green{
 	width: 600px;
 	height: 350px;
+	margin: 100px 0px;
 	background: green;
 	position: relative;
 }
@@ -68,7 +69,7 @@ a, a:{
 }
 .social-icons{
 	width: 100%;
-	padding: 10px 0px;
+	padding: 5px 0px;
 	text-align: center;
 	background: #00008B;
 }
@@ -89,15 +90,11 @@ a, a:{
 	color: #fff;
 	border: 1px solid #000;
 	transition: 1s;
+	transform: translate(500%, 0%);
 
 
 }
 .social-icons  li a:hover{
 	color: #000;
 	border: 1px solid #000;
-}
-
-.social-icons  li a{
-	transform: translate(500%, 0%);
-
 }
